--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,11 @@
         tools:targetApi="31">
 
         <meta-data
-            android:name="com.startapp.sdk.APPLICATION_ID"
-            android:value="205917032" />
-
-        <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
 
         <activity
-            android:name=".SplashActivity"
+            android:name=".BeforeSplashScreen"
             android:screenOrientation="sensorLandscape"
             android:exported="true">
             <intent-filter>
