--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -84,10 +85,9 @@ dependencies {
     //noinspection GradleDependency
     annotationProcessor "androidx.room:room-compiler:2.5.2"
 
-
     implementation 'androidx.annotation:annotation:1.8.2'
     //config admob
-    implementation 'com.google.android.gms:play-services-ads:23.3.0'
+    implementation 'com.google.android.gms:play-services-ads:23.4.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
 
 
@@ -97,12 +97,12 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.greenrobot:eventbus:3.3.1'
 
-    implementation platform('com.google.firebase:firebase-bom:33.3.0')
+    implementation platform('com.google.firebase:firebase-bom:33.4.0')
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.0')
 
     // Add the dependencies for the Firebase Cloud Messaging and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-messaging:24.0.1'
+    implementation 'com.google.firebase:firebase-messaging:24.0.2'
     implementation 'com.google.firebase:firebase-firestore:25.1.0'
 
     //implementation 'androidx.work:work-runtime-ktx:2.8.1'
