--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.karumi:dexter:6.2.3'
     //noinspection GradleDependency
-    implementation 'com.airbnb.android:lottie:6.0.0'
+   // implementation 'com.airbnb.android:lottie:6.0.0'
 
     //noinspection GradleDependency
     implementation 'androidx.room:room-runtime:2.5.2'
@@ -85,11 +85,10 @@ dependencies {
     //noinspection GradleDependency
     annotationProcessor "androidx.room:room-compiler:2.5.2"
 
-    implementation 'androidx.annotation:annotation:1.8.2'
+    implementation 'androidx.annotation:annotation:1.9.0'
     //config admob
     implementation 'com.google.android.gms:play-services-ads:23.4.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
-
 
     //config facebook
     implementation 'com.facebook.android:audience-network-sdk:6.16.0'
@@ -97,13 +96,13 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.greenrobot:eventbus:3.3.1'
 
-    implementation platform('com.google.firebase:firebase-bom:33.4.0')
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.0')
 
     // Add the dependencies for the Firebase Cloud Messaging and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-messaging:24.0.2'
-    implementation 'com.google.firebase:firebase-firestore:25.1.0'
+    implementation 'com.google.firebase:firebase-messaging:24.0.3'
+    implementation 'com.google.firebase:firebase-firestore:25.1.1'
 
     //implementation 'androidx.work:work-runtime-ktx:2.8.1'
     implementation("com.google.code.gson:gson:2.11.0")
