--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     //noinspection GradleDependency
    // implementation 'com.airbnb.android:lottie:6.0.0'
 
+    implementation ("com.intuit.ssp:ssp-android:1.0.6")
+    implementation ("com.intuit.sdp:sdp-android:1.0.6")
+
     //noinspection GradleDependency
     implementation 'androidx.room:room-runtime:2.5.2'
     //noinspection GradleDependency,KaptUsageInsteadOfKsp
