--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'recording.host'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "balera.music.android"
         minSdk 21
-        targetSdk 34
+        targetSdk 35
         versionCode 35
         versionName "0.0.35"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,15 +36,16 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        buildConfig = true
     }
 }
 
 dependencies {
     implementation project(path: ':soundrecorder')
     implementation("androidx.multidex:multidex:2.0.1")
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     debugImplementation ("com.squareup.leakcanary:leakcanary-android:3.0-alpha-1")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
