--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -8,11 +8,11 @@ plugins {
 
 android {
     namespace 'sound.recorder.widget'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         minSdk 21
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -67,6 +67,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        buildConfig = true
     }
 }
 
@@ -114,7 +115,7 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
     implementation ("androidx.multidex:multidex:2.0.1")
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'com.google.android.material:material:1.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
