--- a/soundrecorder/src/main/AndroidManifest.xml
+++ b/soundrecorder/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
                 tools:node="remove"/>
         </provider>
 
+        <property
+            android:name="android.adservices.AD_SERVICES_CONFIG"
+            android:resource="@xml/gma_ad_services_config"
+            tools:replace="android:resource" />
+
         <meta-data
             android:name="com.google.android.gms.ads.DELAY_APP_MEASUREMENT_INIT"
             android:value="true"/>
