--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "balera.music.android"
-        minSdk 21
+        minSdk 23
         targetSdk 35
         versionCode 35
         versionName "0.0.35"
@@ -46,7 +46,7 @@ dependencies {
     implementation("androidx.multidex:multidex:2.0.1")
     implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
     debugImplementation ("com.squareup.leakcanary:leakcanary-android:3.0-alpha-1")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
