--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -73,14 +73,15 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.7.0'
     kapt 'androidx.room:room-compiler:2.7.0'
     implementation 'androidx.room:room-ktx:2.7.0'
+    implementation 'com.unity3d.ads:unity-ads:4.14.2'
     implementation 'com.google.android.gms:play-services-ads:24.2.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
-    implementation 'com.facebook.android:audience-network-sdk:6.19.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.20.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.greenrobot:eventbus:3.3.1'
-    implementation platform('com.google.firebase:firebase-bom:33.12.0')
+    implementation platform('com.google.firebase:firebase-bom:33.13.0')
     implementation 'com.google.firebase:firebase-messaging:24.1.1'
-    implementation 'com.google.firebase:firebase-firestore:25.1.3'
+    implementation 'com.google.firebase:firebase-firestore:25.1.4'
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.google.android.ump:user-messaging-platform:3.2.0'
     implementation 'com.google.android.play:app-update:2.1.0'
