--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -69,17 +69,21 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'androidx.room:room-runtime:2.7.0'
-    kapt 'androidx.room:room-compiler:2.7.0'
-    implementation 'androidx.room:room-ktx:2.7.0'
+    implementation 'com.intuit.sdp:sdp-android:1.1.1'
+    implementation 'androidx.room:room-runtime:2.7.1'
+    kapt 'androidx.room:room-compiler:2.7.1'
+    implementation 'androidx.room:room-ktx:2.7.1'
+    implementation("com.github.skydoves:balloon:1.5.4")
     implementation 'com.unity3d.ads:unity-ads:4.14.2'
-    implementation 'com.google.android.gms:play-services-ads:24.2.0'
+    implementation 'com.google.android.gms:play-services-ads:24.3.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
-    implementation 'com.facebook.android:audience-network-sdk:6.19.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.20.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "androidx.fragment:fragment-ktx:1.8.7"
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.9.0")
+
     implementation 'org.greenrobot:eventbus:3.3.1'
-    implementation platform('com.google.firebase:firebase-bom:33.13.0')
+    implementation platform('com.google.firebase:firebase-bom:33.14.0')
     implementation 'com.google.firebase:firebase-messaging:24.1.1'
     implementation 'com.google.firebase:firebase-firestore:25.1.4'
     implementation 'com.google.code.gson:gson:2.11.0'
