--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation project(path: ':soundrecorder')
     implementation("androidx.multidex:multidex:2.0.1")
     implementation 'androidx.core:core-ktx:1.15.0'
+
+    implementation("androidx.navigation:navigation-fragment-ktx:2.9.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.9.0")
+
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.constraintlayout:constraintlayout:2.2.1"
     debugImplementation ("com.squareup.leakcanary:leakcanary-android:3.0-alpha-1")
