--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -82,6 +82,10 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.8.7"
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.9.0")
 
+    implementation("androidx.navigation:navigation-fragment-ktx:2.9.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.9.0")
+
+
     implementation 'org.greenrobot:eventbus:3.3.1'
     implementation platform('com.google.firebase:firebase-bom:33.14.0')
     implementation 'com.google.firebase:firebase-messaging:24.1.1'
