--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -76,7 +76,10 @@ dependencies {
     implementation("com.github.skydoves:balloon:1.6.9")
     implementation 'com.unity3d.ads:unity-ads:4.14.2'
     implementation 'com.google.android.gms:play-services-ads:24.3.0'
-    implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
+
+    //use version 18 if min sdk  26
+   // implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
     implementation 'com.facebook.android:audience-network-sdk:6.20.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.fragment:fragment-ktx:1.8.7"
