--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.1.1'
     implementation 'androidx.room:room-runtime:2.7.1'
     kapt 'androidx.room:room-compiler:2.7.1'
+  //  implementation 'com.github.Dhaval2404:ColorPicker:2.3'
     implementation 'androidx.room:room-ktx:2.7.1'
     implementation("com.github.skydoves:balloon:1.6.9")
     implementation 'com.unity3d.ads:unity-ads:4.14.2'
