--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
-        android:name="sound.recorder.widget.MyApp"
+        android:name=".GameApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -30,7 +30,7 @@
             android:value="true" />  true saat testing, false di production -->
 
         <activity
-            android:name=".BeforeSplashScreen"
+            android:name=".ActivityGame"
             android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
@@ -48,8 +48,6 @@
         <activity android:name=".MainActivity"
             android:screenOrientation="landscape"/>
 
-        <activity android:name=".ActivityGame"
-            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
