--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '8.6.1' apply false
+    id 'com.android.application' version '8.10.0' apply false
     id 'com.android.library' version '8.6.1' apply false
-    id 'org.jetbrains.kotlin.android' version '2.1.0' apply false // ✅ Sudah disesuaikan
+    id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
     id 'com.google.gms.google-services' version '4.4.2' apply false
-    // id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
-}
-
-tasks.register('clean', Delete) {
-    delete rootProject.buildDir
 }
