--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     //use version 18 if min sdk  26
    // implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
-    implementation 'com.facebook.android:audience-network-sdk:6.21.0'
+   // implementation 'com.facebook.android:audience-network-sdk:6.21.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.fragment:fragment-ktx:1.8.9"
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.10.0")
