--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -74,8 +74,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.8.4'
   //  implementation 'com.github.Dhaval2404:ColorPicker:2.3'
     implementation 'androidx.room:room-ktx:2.8.4'
-    implementation("com.github.skydoves:balloon:1.6.13")
-    implementation 'com.unity3d.ads:unity-ads:4.16.5'
+    implementation("com.github.skydoves:balloon:1.7.1")
+  //   implementation 'com.unity3d.ads:unity-ads:4.16.5'
     implementation 'com.google.android.gms:play-services-ads:24.9.0'
 
     //use version 18 if min sdk  26
