--- a/soundrecorder/build.gradle
+++ b/soundrecorder/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 36
 
     defaultConfig {
-        minSdk 23
+        minSdk 22
         targetSdk 36
         versionCode 1
         versionName "1.0"
@@ -72,17 +72,13 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.1.1'
     implementation 'androidx.room:room-runtime:2.8.4'
     kapt 'androidx.room:room-compiler:2.8.4'
-  //  implementation 'com.github.Dhaval2404:ColorPicker:2.3'
     implementation 'androidx.room:room-ktx:2.8.4'
-    implementation("com.github.skydoves:balloon:1.7.1")
-  //   implementation 'com.unity3d.ads:unity-ads:4.16.5'
-    implementation 'com.google.android.gms:play-services-ads:24.9.0' //versi stabil
+  //  implementation("com.github.skydoves:balloon:1.7.1")
+    implementation "com.google.android.gms:play-services-ads:23.6.0"// support android stable
 
 
     //use version 18 if min sdk  26
-   // implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.2.0'
-   // implementation 'com.facebook.android:audience-network-sdk:6.21.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.fragment:fragment-ktx:1.8.9"
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.10.0")
